--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
             <div class="main-section ">
                 <div class=" main-heading ">Embrace Nature's Gifts</div>
                 <div class="main-images ">
-                    <div class=" image-1"></div>
+                    <div class=" image-1 d-none d-lg-block"></div>
                     <div class=" image-2">
                         <div class="small-images"></div>
                         <div class="small-images2"></div>
                     </div>
-                    <div class=" image-3"></div>
+                    <div class=" image-3 d-none d-lg-block"></div>
                 </div>
                 <div class="herbal-description">Herbal oils have been cherished for centuries, dating back to ancient civilizations like Egypt, China, and India. These natural extracts, derived from plants, have been used for their therapeutic and healing properties.</div>
                 <hr class="hr-line"/>
                 <div id="products-each">
                     <div class="slideshow-container">
-                        <div class="mySlides fade">
+                        <div class="mySlides">
                             <div class="numbertext">1 / 3</div>
-                            <img src="./product2.png" alt="Slide 1">
-                            <div class="text">Neem Oil</div>
+                            <img src="herbal-medicine-with-plants-assortment-high-angle.jpg" alt="Slide 1">
+                            <div class="text">Caption Text 1</div>
                         </div>
-                        <div class="mySlides fade">
+                        <div class="mySlides">
                             <div class="numbertext">2 / 3</div>
-                            <img src="./pexels-mareefe-932577.jpg" alt="Slide 2">
-                            <div class="text">Bringraj Oil</div>
+                            <img src="product.png" alt="Slide 2">
+                            <div class="text">Caption Text 2</div>
                         </div>
-                        <div class="mySlides fade">
-                            <div class="numbertext">3 / 3"></div>
-                            <img src="./ecofriendly-beauty-product.jpg" alt="Slide 3">
-                            <div class="text">Coconut Oil</div>
+                        <div class="mySlides">
+                            <div class="numbertext">3 / 3</div>
+                            <img src="pexels-tree-of-life-seeds-1708680-3259600.jpg" alt="Slide 3">
+                            <div class="text">Caption Text 3</div>
                         </div>
                         <!-- Next and previous buttons -->
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
