--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
             <!-- Navbar Section -->
             <nav class="navbar ">
-                <a href="#" class="navbar-logo">
-                    <img src="logo.png" alt="Logo" style="height: 40px; margin-right: 10px;">
-                    CompanyName
+                <a href="#main" class="navbar-logo">
+                    <img src="./WhatsApp Image 2024-11-04 at 18.14.15_80fa33a6.jpg" alt="Logo" style="height: 60px; margin-right: 10px;">
+                   
                 </a>
                 <div class="navbar-menu">
                     <a href="#home">Home</a>
-                    <a href="#aboutus">About Us</a>
+                    <a href="#slide">images</a>
                     <div class="dropdown">
                         <a href="#products-each">Products</a>
                      
@@ -36,7 +36,7 @@
             </nav>
 
             <!--main-section-->
-            <div class="main-section ">
+            <div class="main-section " id="main">
                 <div class=" main-heading ">Embrace Nature's Gifts</div>
                 <div class="main-images ">
                     <div class=" image-1 d-none d-lg-block"></div>
@@ -49,7 +49,7 @@
                 <div class="herbal-description">Herbal oils have been cherished for centuries, dating back to ancient civilizations like Egypt, China, and India. These natural extracts, derived from plants, have been used for their therapeutic and healing properties.</div>
                 <hr class="hr-line"/>
                 <div id="products-each">
-                    <div class="slideshow-container">
+                    <div class="slideshow-container" id="slide">
                         <div class="mySlides">
                             <div class="numbertext">1 / 3</div>
                             <img src="herbal-medicine-with-plants-assortment-high-angle.jpg" alt="Slide 1">
